[bug] with Firefox browser, the texts in date inputs are shifted to the bottom

--- a/app/assets/stylesheets/app.components.scss
+++ b/app/assets/stylesheets/app.components.scss
@@ -673,3 +673,7 @@ padding: 10px;
     display: inline-block;
   }
 }
+
+input[type=date].form-control {
+  line-height: 25px;
+}
